fixed profile alignment

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -292,3 +292,16 @@ p {
   padding: 5px;
   max-width: 210px;
 }
+
+#gravatar {
+  text-align:left;
+  padding-left:0;
+  margin-left:0;
+  position:absolute;
+}
+
+#prof-data {
+  float:right;
+  text-align:right;
+  padding-right:20px
+}
